--- a/offroad/js/locales/en/messages.po
+++ b/offroad/js/locales/en/messages.po
@@ -570,6 +570,10 @@ msgstr "If you disable this, the driver safety check will be disabled completely
 msgid "If you disable this, you will not receive any \"Turn Exceeds Steering Limit\" alerts on the screen. Hyundai, Ford, Toyota do not have this alert."
 msgstr "If you disable this, you will not receive any \"Turn Exceeds Steering Limit\" alerts on the screen. Hyundai, Ford, Toyota do not have this alert."
 
+#: js/components/DragonpilotSettings/DragonpilotSettings.js:300
+msgid "If you disable uploader, it will stop uploading driving data for AI training, reboot required."
+msgstr "If you disable uploader, it will stop uploading driving data for AI training, reboot required."
+
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:513
 msgid "If you enable this, dp will notify you when lead car starts moving from stationary."
 msgstr "If you enable this, dp will notify you when lead car starts moving from stationary."
