--- a/offroad/js/locales/zh_CN/messages.po
+++ b/offroad/js/locales/zh_CN/messages.po
@@ -570,6 +570,10 @@ msgstr "如果您关闭这个选项，dp 的驾驶监控功能将完全取消，
 msgid "If you disable this, you will not receive any \"Turn Exceeds Steering Limit\" alerts on the screen. Hyundai, Ford, Toyota do not have this alert."
 msgstr "如果您关闭这个选项，您将不再会收到 \"弯道超过方向盘转向限制\" 的警示讯息。 Hyundai、Ford、Toyota 车种没有用到此警示。"
 
+#: js/components/DragonpilotSettings/DragonpilotSettings.js:300
+msgid "If you disable uploader, it will stop uploading driving data for AI training, reboot required."
+msgstr "如果您关闭这个选项，记录上传服务将停止上传用来训练 AI 模式的资料，需要重新开机。"
+
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:513
 msgid "If you enable this, dp will notify you when lead car starts moving from stationary."
 msgstr "启用这个选项后， 当前车从静止开始移动时 (如红灯)， dp 将会发出警示讯息。"
