--- a/offroad/js/locales/zh_TW/messages.po
+++ b/offroad/js/locales/zh_TW/messages.po
@@ -570,6 +570,10 @@ msgstr "如果您關閉這個選項，dp 的駕駛監控功能將完全取消，
 msgid "If you disable this, you will not receive any \"Turn Exceeds Steering Limit\" alerts on the screen. Hyundai, Ford, Toyota do not have this alert."
 msgstr "如果您關閉這個選項，您將不再會收到 \"彎道超過方向盤轉向限制\" 的警示訊息。 Hyundai、Ford、Toyota 車種沒有用到此警示。"
 
+#: js/components/DragonpilotSettings/DragonpilotSettings.js:300
+msgid "If you disable uploader, it will stop uploading driving data for AI training, reboot required."
+msgstr "如果您關閉這個選項，記錄上傳服務將停止上傳用來訓練 AI 模式的資料，需要重新開機。"
+
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:513
 msgid "If you enable this, dp will notify you when lead car starts moving from stationary."
 msgstr "啟用這個選項後， 當前車從靜止開始移動時 (如紅燈)， dp 將會發出警示訊息。"
