--- a/frame/app/src/main/res/values/strings.xml
+++ b/frame/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="go_back">Go back</string>
     <string name="ride_completed">Ride completed</string>
     <string name="continue_str">Continue</string>
-    <string name="keey_away_sunlight">Keep EON away from sunlight</string>
+    <string name="keep_away_sunlight">Keep EON away from sunlight</string>
 </resources>
