--- a/offroad/js/locales/zh_CN/messages.po
+++ b/offroad/js/locales/zh_CN/messages.po
@@ -212,7 +212,7 @@ msgstr "关闭高德地图"
 
 #: js/components/Settings/Settings.js:312
 msgid "Close TomTom Safety Camera"
-msgstr "开启 TomTom 测速照相"
+msgstr "关闭 TomTom 测速照相"
 
 #: js/components/SetupTerms/SetupTerms.js:47
 msgid "Comma.ai, Inc. Terms & Conditions"
