--- a/offroad/js/locales/zh_CN/messages.po
+++ b/offroad/js/locales/zh_CN/messages.po
@@ -626,12 +626,12 @@ msgid "If you disable uploader, it will stop uploading driving data for AI train
 msgstr "如果您关闭这个选项，记录上传服务将停止上传用来训练 AI 模式的资料，需要重启。"
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:548
-msgid "If you enable this, dp will assist you to change lane once above 24mph / 40kph. We DO NOT RECOMMEND that you turn on this unless you know what you are doing, we hold no responsibility if you enable this option."
-msgstr "启用这个选项后，dp 将会在时速高于 24 英里 或 40 公里时协助您变道。 （除非您知道您在做什么，不然我们不建议您使用本功能，我们也不会负任何事故的责任。）"
+msgid "If you enable this, dp will assist you to change lane once above 37 mph / 60kph. We DO NOT RECOMMEND that you turn on this unless you know what you are doing, we hold no responsibility if you enable this option."
+msgstr "启用这个选项后，dp 将会在时速高于 37 英里 或 60 公里时协助您变道。 （除非您知道您在做什么，不然我们不建议您使用本功能，我们也不会负任何事故的责任）"
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:558
-msgid "If you enable this, dp will change lane for you once the speed is above 40mph / 65kph. We DO NOT RECOMMEND that you turn on this unless you know what you are doing, we hold no responsibility if you enable this option."
-msgstr "启用这个选项后，dp 将会在时速高于 40 英里 或 65 公里时自动变道。 （除非您知道您在做什么，不然我们不建议您使用本功能，我们也不会负任何事故的责任。）"
+msgid "If you enable this, dp will change lane for you once the speed is above 60mph / 97kph. We DO NOT RECOMMEND that you turn on this unless you know what you are doing, we hold no responsibility if you enable this option."
+msgstr "启用这个选项后，dp 将会在时速高于 60 英里 或 97 公里时自动变道。 （除非您知道您在做什么，不然我们不建议您使用本功能，我们也不会负任何事故的责任）"
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:539
 msgid "If you enable this, dp will notify you when lead car starts moving from stationary."
@@ -804,7 +804,7 @@ msgstr "重启并更新"
 
 #: js/components/Settings/Settings.js:378
 msgid "Receive alerts to steer back into the lane when your vehicle drifts over a detected lane line without a turn signal activated while driving over 31mph (50kph)."
-msgstr "车速在 50 km/h 以上，且未打转向灯的情况下，如果检测到车辆驶出当前车道线时，则会发出车道偏离警告，并控制转向将车辆拉回车道线内。"
+msgstr "车速在 50 km/h 以上，且未打转向灯的情况下，如果检测到车辆驶出当前车道线时，则会发出车道偏离警告。"
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:333
 msgid "Record EON screen as dashcam footage, it will automatically delete old footage if the available space is less than 15%, footage will be stored in /sdcard/dashcam/."
