--- a/frame/app/src/main/res/values-zh-rCN/strings.xml
+++ b/frame/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Chffr Plus Frame</string>
     <string name="storage">存储空间</string>
-    <string name="eon_temp">EON 温度</string>
+    <string name="temp">温度</string>
     <string name="no_panda">PANDA\n未连线</string>
+    <string name="panda_no_gps">PANDA\nGPS 讯号: 无</string>
+    <string name="panda_good_gps">PANDA\nGPS 讯号: 好</string>
     <string name="panda_active">PANDA\n已连线</string>
     <string name="start_to_begin">启动车辆，开始驾驶</string>
     <string name="go_back">返回</string>
