--- a/offroad/js/locales/ja_JP/messages.po
+++ b/offroad/js/locales/ja_JP/messages.po
@@ -102,7 +102,7 @@ msgid "Adjust the shutdown timer to shutdown your device after a period of time.
 msgstr ""
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:670
-msgid "Adjust the steering monitor timer, set this to 0 if you would like to disable steering monitor. Default is 3 minutes."
+msgid "Adjust the steering monitor timer, set this to \"OFF\" if you would like to disable steering monitor. Default is 3 minutes."
 msgstr ""
 
 #: js/components/DragonpilotSettings/DragonpilotSettings.js:615
